// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encode image with bitDepth of 1 encode a 1x5 image 1`] = `
Uint8Array [
  66,
  77,
  166,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  146,
  0,
  0,
  0,
  124,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  5,
  0,
  0,
  0,
  1,
  0,
  1,
  0,
  0,
  0,
  0,
  0,
  20,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  0,
  0,
  0,
  255,
  0,
  0,
  255,
  0,
  0,
  255,
  0,
  0,
  255,
  0,
  0,
  0,
  66,
  71,
  82,
  115,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  4,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  255,
  255,
  255,
  0,
  128,
  0,
  0,
  0,
  128,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  128,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`encode image with bitDepth of 1 encode a 5x1 image 1`] = `
Uint8Array [
  160,
  0,
  0,
  0,
]
`;

exports[`encode image with bitDepth of 1 encode a 5x5 image 1`] = `
Uint8Array [
  66,
  77,
  166,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  146,
  0,
  0,
  0,
  124,
  0,
  0,
  0,
  5,
  0,
  0,
  0,
  5,
  0,
  0,
  0,
  1,
  0,
  1,
  0,
  0,
  0,
  0,
  0,
  20,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  0,
  0,
  0,
  255,
  0,
  0,
  255,
  0,
  0,
  255,
  0,
  0,
  255,
  0,
  0,
  0,
  66,
  71,
  82,
  115,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  4,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  255,
  255,
  255,
  0,
  0,
  0,
  0,
  0,
  56,
  0,
  0,
  0,
  40,
  0,
  0,
  0,
  56,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`encode image with bitDepth of 1 encode a 6x4 image 1`] = `
Uint8Array [
  0,
  0,
  0,
  0,
  252,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  252,
  0,
  0,
  0,
]
`;

exports[`encode image with bitDepth of 1 encode a 10x2 image 1`] = `
Uint8Array [
  169,
  192,
  0,
  0,
  229,
  64,
  0,
  0,
]
`;

exports[`encode image with bitDepth of 1 encode a 62x4 1`] = `
Uint8Array [
  128,
  0,
  0,
  127,
  255,
  128,
  0,
  0,
  255,
  255,
  255,
  0,
  0,
  255,
  255,
  252,
  0,
  0,
  0,
  255,
  255,
  0,
  0,
  0,
  255,
  255,
  255,
  0,
  0,
  255,
  255,
  252,
]
`;

exports[`encode image with bitDepth of 1 encode image where skipBit can equal relOffset on the last column 1`] = `
Uint8Array [
  15,
  255,
  255,
  255,
  255,
  255,
  255,
  240,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  15,
  255,
  255,
  255,
  255,
  255,
  255,
  240,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`encode image with bitDepth of 1 encode image with exactly 4 bytes width 1`] = `
Uint8Array [
  255,
  255,
  0,
  0,
  0,
  0,
  255,
  255,
]
`;

exports[`encode image with bitDepth of 1 encode image with more that 4 bytes width 1`] = `
Uint8Array [
  0,
  0,
  255,
  255,
  255,
  192,
  0,
  0,
  0,
  0,
  255,
  255,
  255,
  192,
  0,
  0,
]
`;
